roles/zabbix/templates/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zabbix
  labels:
    name: zabbix
