roles/zabbix/templates/zabbix-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zabbix-server-mysql
  name: zabbix-server-mysql
  namespace: zabbix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zabbix-server-mysql
  strategy: {}
  template:
    metadata:
      labels:
        app: zabbix-server-mysql
    spec:
      containers:
      - image: zabbix/zabbix-server-mysql:7.4-ubuntu-latest
        name: zabbix-server-mysql
        ports:
          - containerPort: 10051
            name: zabbix-port
            protocol: TCP
status: {}
