roles/zabbix/templates/zabbix-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zabbix-web-mysql
  name: zabbix-web-mysql
  namespace: zabbix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zabbix-web-mysql
  strategy: {}
  template:
    metadata:
      labels:
        app: zabbix-web-mysql
    spec:
      containers:
      - image: zabbix/zabbix-web-nginx-mysql:7.4-ubuntu-latest
        name: zabbix-web-mysql
        ports:
          - containerPort: 8080
            name: http
            protocol: TCP
status: {}
