roles/zabbix/templates/zabbix-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zabbix-server-service
  namespace: zabbix
  labels:
    app: zabbix-server-mysql
spec:
  type: ClusterIP
  ports:
    - name: zabbix-port
      port: 10051
      targetPort: 10051
      protocol: TCP
  selector:
    app: zabbix-server-mysql
